Add start match request params list.

--- a/README.org
+++ b/README.org
@@ -16,3 +16,32 @@
 此时项目根目录中会出现 build 文件夹，其中 Solarmax3vt3_killersigned-aligned.apk 就是打包的apk
 
 
+* 联机
+** start match request params
+|            | type      | misc_id | map_id | cType      | nPlayerNum | bQuick | chapterId | nDifficult | GroupID | bEnterWatch |
+| default    |           | ""      | ""     |            |            | false  | ""        | -1         | ""      | false       |
+|------------+-----------+---------+--------+------------+------------+--------+-----------+------------+---------+-------------|
+| 4人混战     | mt_ladder |         |        | ct_1v1v1v1 |          4 | true   |           |            |         |             |
+| 3人混战     | mt_ladder |         |        | ct_1v1v1   |          3 | true   |           |            |         |             |
+| 2人切磋     | mt_ladder |         |        | ct_1v1     |          2 | true   |           |            |         |             |
+| 2v2组队     | mt_ladder |         |        | ct_2v2     |          4 | false  |           |            |         |             |
+| 2v2匹配     | mt_ladder |         |        | ct_2v2     |          4 | true   |           |            |         |             |
+|------------+-----------+---------+--------+------------+------------+--------+-----------+------------+---------+-------------|
+| 2人合作组队  | mt_room   |         | ✓      | ct_2vPC    |          2 | false  | ✓         | ✓          | ✓       |             |
+| 3人合作组队  | mt_room   |         | ✓      | ct_3vPC    |          3 | false  | ✓         | ✓          | ✓       |             |
+| 4人合作组队  | mt_room   |         | ✓      | ct_4vPC    |          4 | false  | ✓         | ✓          | ✓       |             |
+| 2人合作匹配  | mt_room   |         | ✓      | ct_2vPC    |          2 | true   | ✓         | ✓          | ✓       |             |
+| 3人合作匹配  | mt_room   |         | ✓      | ct_3vPC    |          3 | true   | ✓         | ✓          | ✓       |             |
+| 4人合作匹配  | mt_room   |         | ✓      | ct_4vPC    |          4 | true   | ✓         | ✓          | ✓       |             |
+|------------+-----------+---------+--------+------------+------------+--------+-----------+------------+---------+-------------|
+| 4人混战     | mt_room   |         |        | ct_1v1v1v1 |          4 | false  |           |            |         |             |
+| 3人混战     | mt_room   |         |        | ct_1v1v1   |          3 | false  |           |            |         |             |
+| 2人切磋     | mt_room   |         |        | ct_1v1     |          2 | false  |           |            |         |             |
+| 2v2        | mt_room   |         |        | ct_2v2     |          4 | false  |           |            |         |             |
+|------------+-----------+---------+--------+------------+------------+--------+-----------+------------+---------+-------------|
+| 假如房间观战 | mt_room   | room_id |        | ct_null    |          0 | false  |           |            |         | true        |
+| 加入房间对战 | mt_room   | room_id |        | ct_null    |          0 | false  |           |            |         |             |
+
+1. 创建房间中还有一个 ct_null 暂不确认场景，应该是没有入口的
+2. 被邀请时，客户端不发出 start-match 请求，服务端主动推送
+
